--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -44,10 +44,10 @@
    "outputs": [],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "lending_df = pd.read_csv(Path('../Resources/lending_data.csv'))\n",
+    "# YOUR CODE HERE!\n",
     "\n",
     "# Review the DataFrame\n",
-    "lending_df.head()"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -67,10 +67,10 @@
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "y = lending_df['loan_status']\n",
+    "# YOUR CODE HERE!]\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "X = lending_df.drop(columns='loan_status')"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Review the y variable Series\n",
-    "print(f\"y sample: {y[:10]}\")"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Review the X variable DataFrame\n",
-    "print(f\"X sample: {X[:10]}\")"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -112,10 +112,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, \n",
-    "                                                    y, \n",
-    "                                                    random_state=1, \n",
-    "                                                    stratify=y)"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -153,10 +150,10 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "# YOUR CODE HERE!\n",
     "\n",
     "# Fit the model using training data\n",
-    "modelfit = model.fit(X_train, y_train)"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -174,7 +171,7 @@
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "testing_predictions = modelfit.predict(X_test)"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -196,9 +193,7 @@
    "outputs": [],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "test_matrix = confusion_matrix(y_test, testing_predictions)\n",
-    "\n",
-    "print(test_matrix)"
+    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -208,9 +203,7 @@
    "outputs": [],
    "source": [
     "# Print the classification report for the model\n",
-    "testing_report = classification_report(y_test, testing_predictions)\n",
-    "\n",
-    "print(testing_report)"
+    "# YOUR CODE HERE!"
    ]
   },
   {
